@@ -162,6 +162,10 @@ ags_buffer_audio_signal_init(AgsBufferAudioSignal *buffer_audio_signal)
 void
 ags_buffer_audio_signal_finalize(GObject *gobject)
 {
+  if(AGS_RECALL_AUDIO_SIGNAL(gobject)->destination != NULL){
+    g_object_unref(AGS_RECALL_AUDIO_SIGNAL(gobject)->destination);
+  }
+  
   /* call parent */
   G_OBJECT_CLASS(ags_buffer_audio_signal_parent_class)->finalize(gobject); 
 }
@@ -268,7 +272,7 @@ ags_buffer_audio_signal_run_init_pre(AgsRecall *recall)
   pthread_mutex_unlock(application_mutex);
 
   /* recycling */
-  //  recall->flags &= (~AGS_RECALL_PERSISTENT);
+  recall->flags &= (~AGS_RECALL_PERSISTENT);
   recycling = AGS_RECALL_RECYCLING(buffer_recycling)->destination;
 
   pthread_mutex_lock(application_mutex);
@@ -292,7 +296,9 @@ ags_buffer_audio_signal_run_init_pre(AgsRecall *recall)
   destination = ags_audio_signal_new((GObject *) soundcard,
 				     (GObject *) recycling,
 				     (GObject *) parent_recall_id);
-  g_object_ref(destination);
+  g_object_set(buffer_audio_signal,
+	       "destination\0", destination,
+	       NULL);  
   ags_recycling_create_audio_signal_with_defaults(recycling,
 						  destination,
 						  delay, attack);
@@ -305,10 +311,7 @@ ags_buffer_audio_signal_run_init_pre(AgsRecall *recall)
   destination->stream_current = destination->stream_beginning;
 
   pthread_mutex_lock(recycling_mutex);
-  
-  AGS_RECALL_AUDIO_SIGNAL(buffer_audio_signal)->destination = destination;
-  g_object_ref(destination);
-  
+
   ags_recycling_add_audio_signal(recycling,
 				 destination);
 
@@ -366,9 +369,9 @@ ags_buffer_audio_signal_run_inter(AgsRecall *recall)
   stream_source = source->stream_current;
 
   if(stream_source == NULL){
-    if((AGS_RECALL_PERSISTENT & (recall->flags)) == 0){
+    //    if((AGS_RECALL_PERSISTENT & (recall->flags)) == 0){
       ags_recall_done(recall);
-    }
+      //    }
 
     return;
   }
