@@ -210,7 +210,7 @@ ags_audio_thread_init(AgsAudioThread *audio_thread)
 				   NULL,
 				   10);
 
-    thread->freq = ceil((gdouble) samplerate / (gdouble) buffer_size);
+    thread->freq = ceil((gdouble) samplerate / (gdouble) buffer_size) + AGS_SOUNDCARD_DEFAULT_OVERCLOCK;
   }
 
   g_free(str0);
