@@ -197,7 +197,7 @@ ags_export_thread_init(AgsExportThread *export_thread)
 				   NULL,
 				   10);
 
-    thread->freq = ceil((gdouble) samplerate / (gdouble) buffer_size);
+    thread->freq = ceil((gdouble) samplerate / (gdouble) buffer_size) + AGS_SOUNDCARD_DEFAULT_OVERCLOCK;
   }
 
   g_free(str0);
